fix: fix resizing pictureBefore on mobile section-3

--- a/section-4/section-4.css
+++ b/section-4/section-4.css
@@ -29,7 +29,9 @@
   color: #000000;
 }
 
-.video__wrap-video {}
+.video__wrap-video {
+  user-select: none;
+}
 
 .video__main-video {
   position: relative;
